src/App.css
* {
    box-sizing: border-box;
}

.div-card-img-top {
    position: relative;
    text-align: center;
    color: white;
}

.bottom-right {
    position: absolute;
    bottom: -15px;
    right: 16px;
}

.bottom-left {
    position: absolute;
    top: 155px;
    left: 25px;
    overflow: hidden;
}

.shop-item {
    transition: .2s;
    margin-top: 10px;
}

.shop-item:hover {
    transform: translate(0, -10px);
}

.menu-sidenav {
    position: fixed;
    width: 325px;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto;
    background-color: white;
    border-right: 1px solid #eee;
}

.shop-content {
    padding-top: 60px;
    overflow: hidden;
}

.shop-menu-top-image {
    background-size: cover;
    background-position: center center;
    background-repeat: no-repeat;
    height: 200px;
}

.cover-color {
    position: relative;
    width: 100%;
    height: 200px;
    background-color: rgba(0, 0, 0, 0.6);
    opacity: 0.4;
}

.top-right {
    position: absolute;
    top: 80px;
    right: 50px;
}


.tab-content {
    color: black;
}

.nav-shop-tab .nav-link.active {
    color:black;
    font-weight: 700;
    border-bottom: 4px solid #7CFC00;
}

.nav-shop-tab .nav-link:hover {
    color: #7CFC00;
}

.nav-shop-tab .nav-link {
    color:black;
    font-size: 1.1rem;
    padding-bottom: 0.8rem;
    padding-top: 0.8rem;
}

.nav-shop-tab {
    border-bottom: 1px solid #cccccc;
    border-top: 1px solid #cccccc;
}


.add-to-cart-btn {
    font-size: 1.5rem;
    position: absolute;
    bottom: 0.5rem;
    right: 1rem;
    color: #7CFC00;
    transition: linear 0.2s;
}

.add-to-cart-btn:hover {
    cursor: pointer;
    transform: scale(1.1);
}

.add-to-cart-btn:active {
    transform: scale(0.9);
}


.warp-hide-text {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}



.menu-images img {
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    height: 100%;
}

.menu-images {
    width: 80px;
    height: 80px;
    float: left;
    overflow: hidden;
    position: relative;
}

.menu-items {
    height: 90px;
}

@media (min-width: 1200px) {
    .shop-content {
        padding-left: 325px;
    }
    .bottom-left {
        left: 350px;
    }
}


@media (min-width: 768px) {
    .shop-content {
        padding-top: 80px;
    }
    .shop-menu-top-image {
        height: 300px;
    }
    .bottom-left {
        top: 240px;
    }
    .cover-color {
        height: 300px;
    }
    .top-right {
        top: 100px;
    }
    .menu-images {
        width: 100px;
        height: 100px;
    }
    .menu-items {
        height: 120px;
    }
}

